--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap');
 
+.teste{
+    display: none;
+}
+
 *{
     box-sizing: border-box;
     padding: 0;
@@ -9,7 +13,7 @@
 body{
     background-color: #1F2532;
     font-family: 'Poppins', sans-serif;
-    max-width: 1350px;
+    /*max-width: 1350px;*/
     padding: 0 80px;
     margin: 0 auto;
     display: flex;
@@ -221,6 +225,12 @@ input[type=number] {
         
         border-radius: 15px;
         transition: all ;
+    }
+}
+
+@media (min-width:500px){
+    .teste{
+        display: none;
     }
 }
 
