--- a/estilo/style.css
+++ b/estilo/style.css
@@ -14,6 +14,7 @@ body{
     background-color: #1F2532;
     font-family: 'Poppins', sans-serif;
     /*max-width: 1350px;*/
+    height: 100vh;
     padding: 0 80px;
     margin: 0 auto;
     display: flex;
@@ -24,7 +25,7 @@ body{
 
 
 .box{
-    margin-top: 105px;
+    /*margin-top: 105px;*/
     display: flex;
     width: 826px;
     height: 454px;
